<resources>
    <string name="app_name">Social Hour</string>
    <string name="text_friends">Friends</string>
    <string name="text_add">Add</string>
    <string name="text_groups">Groups</string>
    <string name="text_settings">Settings</string>
    <string name="text_activity">Activity</string>
    <string name="large_text">
        Lorem ipsum dolor sit amet, denique tincidunt percipitur eam id, cum meis timeam ut, ius etiam dictas id. Probo commodo assueverit in his, nec labores mediocrem necessitatibus an, mea diceret menandri ex. At sapientem constituto mei. Nam volumus honestatis an, duo dictas nostrud menandri ea.
Eum ut dolore consequat, nec mundi persius periculis ea. Numquam elaboraret vel ex, ius ad adhuc scripta, est ne agam numquam. No vim quas iusto, lorem delenit sit te. Sea ex illum solet denique.
Cum eu autem aliquid, no sit graece pertinacia voluptaria. Quo oratio tamquam ullamcorper ex. Te legimus salutatus principes nec, solum scaevola ne sed, vis in detracto inimicus reprehendunt. Mea ne quot facer suscipit.
Sale atomorum efficiantur ne duo. An habeo probatus adolescens per, ea duis feugait platonem eum. Ea quando sententiae vel. Modus solet delicata an vis, mea partiendo percipitur ut, idque tacimates mea ea. Natum equidem invenire mea cu, eam cu nibh homero commodo, id legimus prodesset suscipiantur vix.
Ei eam indoctum expetenda. Has ex propriae imperdiet voluptatibus, eu inermis inciderint intellegebat vim. Cu facer congue labitur sit. Est an euismod accumsan accusamus, sit cu liber prompta feugiat. Facilis argumentum suscipiantur in per.
Ei graecis sensibus torquatos est. Vix te feugait commune, esse consul pertinacia ius ei. Ubique populo qualisque vim ne. Ut vidisse honestatis consectetuer cum, cetero senserit vis at. No nusquam theophrastus pri, an duo utinam legendos temporibus. Eu nam sale numquam albucius, quo cu quis semper, ei pro discere utroque. In vel eius saperet disputationi, autem fierent intellegam cu mei.
In eum moderatius ullamcorper, ei sed stet laboramus. Brute aperiam in ius. Mei delicata expetenda et, timeam imperdiet conclusionemque te has. Ad modus latine argumentum est, eu saperet accommodare vel. Inermis deseruisse sed ut.
An quo dicunt minimum, eam in modo assueverit. Sed iusto ubique contentiones ut, in ignota voluptatum ius, in veniam fuisset vis. Eu quod verear pericula pro, quodsi appetere fabellas mea et, his id unum hendrerit. Eu euismod interpretaris mei, modo eligendi accommodare eu quo.
Pri et case lorem, no sit posse accommodare. Sea in ridens adipiscing, no postea evertitur temporibus mei. Commodo detracto an vix. Gubergren appellantur ex vim.
Ubique causae saperet an eam, est ei reque labitur placerat, error mediocritatem cu mel. Vix autem commune urbanitas cu, maiorum detraxit imperdiet per cu. In vis delenit denique. Eum consul mucius an, at vel stet numquam necessitatibus. Per ne oblique patrioque. Eum ut everti mollis, dolorem accusamus in mea.
Eos ei tota viris prompta, ut choro latine delicata mea. Vel malis tacimates perpetua te, at est urbanitas consequuntur. Mea te laudem nemore, no denique interpretaris pri. An laudem persius vix, quo mollis mnesarchum ea, sea eu corpora fabellas.
Eam zril lobortis ei. Ne eum vidit malis malorum, placerat inimicus qui te, cum ex tantas dictas possim. Pri ei paulo vivendo torquatos. An dicat nostrum his. Eos at aeque oblique. Ius ne mollis dolorum, eos ea sapientem gubergren.
Usu graece ancillae deleniti cu, quod consectetuer sit te, vel at enim minim petentium.
        \n\n\n\n\n\n\n\n\n\n
    </string>
    <string name="large_text_2">
        Eu possim aperiri virtute sed, qui ne quodsi consetetur. Eum oporteat electram ea, cum ei assum semper pertinax. Cu populo intellegam duo. Causae accusam atomorum ius te, ridens gloriatur sententiae ea his, an audiam utroque sed. Vis odio accusam intellegat te.
Cum eu expetendis mnesarchum. Tibique epicurei ea mel. No scripta liberavisse nam. An per aliquip diceret, eu his ludus luptatum explicari, mei cu mutat repudiare efficiendi. Vim te legimus assueverit, eos ad summo referrentur.
An nisl duis aliquam cum, dolorem signiferumque ad pro, te quod probatus eleifend vim. Eu aeque ancillae usu. Te malis tractatos referrentur sit. Vix quem veniam liberavisse in, nam volutpat sadipscing cu. Nam quot affert veritus at. Vix viderer nostrud te. Epicurei expetenda conclusionemque at eum.
Ne amet melius euripidis mel. Ut tantas referrentur vix, ea munere singulis cum. Eu pri alii urbanitas temporibus. Solum inimicus conclusionemque est et, stet omnesque et mea, melius pertinacia eu mei.
Vis te idque voluptatibus. Mea autem eligendi efficiendi in, no fuisset detraxit persecuti duo. Ad odio omnes rationibus eum. Eos expetenda moderatius dissentiunt ad, sea et lorem fugit, pro id verear eloquentiam appellantur. Veri justo mucius ad sea, his audire assueverit cu.
Case ullum definitionem eos cu, sit an veri labore eruditi. Melius veritus invenire eum ut, pri dolor primis dolores an. Dolor reformidans et sit, commodo quaeque saperet eam ut. In rebum utamur expetendis per. No vix molestie suscipiantur, sit nibh paulo dissentiet id. Delenit admodum referrentur mei et.
Pro at facer tantas luptatum. Sit option recusabo deterruisset ex, dicat.
        \n\n\n\n\n\n\n\n\n
    </string>
    <string name="large_text_3">
        Tritani noluisse et qui, nam eu consul splendide. Iuvaret dissentiunt ei mei, id vis clita similique elaboraret. Sea an quot graeci fastidii. Cum legere recteque democritum ne.
Has et legendos consequat comprehensam. Te mea sumo alienum. Molestie appareat id vim. Iudicabit abhorreant no vim. Ut elitr regione pri, vel quod tincidunt ex.
Dicam dictas omittantur ad vix, clita virtute eos in. Vis eu esse ancillae. Duo noluisse inimicus constituto eu, ius choro ceteros torquatos eu, per eu mnesarchum elaboraret. Augue prompta te cum, et pro nullam efficiendi.
Quot persequeris signiferumque ex eam, ea usu dicta deseruisse. Sed erat minimum platonem id, delicata qualisque referrentur nec ei. Mel cu option luptatum euripidis, quo autem debet in, id suas nibh sed. Ea mei hinc augue, in omnes honestatis vim. Viris torquatos adipiscing at vix, quem aliquip ex mel.
Quis voluptatibus concludaturque ne mel. Mei lobortis tincidunt ad, noster convenire mnesarchum mel id. Eu denique delicatissimi sea. Ea hinc consequat vel, regione dolorem pericula nam ex. Nonumy nullam quaestio eu est.
Ad sed homero veritus eligendi. Eum semper postulant cu, ei sit vituperata repudiandae. Augue percipit tincidunt te vis, his dicit dicam no. Reque errem malorum ne ius, lorem ceteros reformidans sit eu, et vitae tibique albucius his.
Habeo latine scribentur vel cu, ei duo ancillae democritum. Pri doctus lucilius cu, nam homero bonorum ea. Ius civibus referrentur contentiones eu. Nusquam recusabo ut pro, usu ei nemore quaeque repudiare. Ceteros omnesque percipit ei per, saepe adipiscing pri id, putant disputationi no eos.
Nonumy utamur bonorum ad vel. Ut eum impetus virtute alienum, putent prodesset eu nam, ad mea mazim epicuri repudiare. Viris singulis pro an, lorem repudiare conclusionemque sea te, ad simul detraxit ius. Cum te tempor debitis tacimates, vel eu mucius commodo expetenda. Eu vim erat saepe, ea sea graeci offendit. Te cum amet honestatis.
Sit error nobis vidisse ut, et his sonet senserit percipitur, omnis recusabo postulant has in. Has at ullum dissentias. Eu sed purto dictas, vim et nonumy numquam repudiare. Ei unum partiendo conclusionemque eos, nec id bonorum accusata mandamus, ea aeterno oporteat usu. An ius purto partiendo accommodare. Quo insolens deserunt petentium in, saepe graeci cu sed.
Illum consectetuer ut duo, ius albucius conclusionemque ex. In munere nominavi laboramus est, honestatis omittantur cu pro, duo alia simul ad. Tota salutandi no eam, nam iudico aliquip argumentum ex, elit civibus sea ex. Ex eum iusto nonumes, ut harum postea sea.
Te vix reque posidonium, molestiae hendrerit vix eu, mel in alia unum. Mutat graecis reprehendunt ius ad, reque rationibus quo at, duis gubergren ut vim. Eirmod ornatus deleniti sed et, clita exerci audire ut usu. Partem appetere officiis in per, no omnes laoreet blandit sit. Altera detracto eam ex, nec at choro mediocrem.
Tale nostro est te, postea eleifend duo cu.
        \n\n\\n\n\n\n\n\n\n\n
    </string>
    <string name="large_text_4">
        Eum bonorum vivendo ut, pri ea purto mazim moderatius. Quo ex phaedrum eloquentiam, ne amet singulis eam. Repudiare signiferumque in pri, an cum malorum sanctus officiis.
Ea vocent integre aliquam nec. Sed ei nostrum albucius euripidis, brute doctus rationibus in qui. Te atomorum molestiae qui. Possim postulant disputando eam ei.
Id mel simul ceteros voluptua, his civibus periculis similique cu. Nemore maiorum sensibus no eos. Ex quo etiam dicant rationibus. Cum no nullam veritus, magna viderer pri et. Id sale consulatu reformidans mei, cum ad inani homero ceteros. In etiam phaedrum invenire ius.
Et est tota audire consequat, vel id epicuri hendrerit, eos insolens invenire ea. Pro quot dolores ei. Ne cum rebum ullum urbanitas. Has vidit melius in.
In vis discere apeirian prodesset. Elit justo ea his. Summo graeci mollis eam at, insolens imperdiet sea ad, bonorum omnesque dignissim at duo. Prima dolorum vivendum mei cu, sed duis eirmod ut. Inermis docendi platonem quo ad, vel an impetus aliquam quaestio, laudem malorum vim et. Et eum vidisse pertinax, no pro vidit mutat, qui an quas melius.
Stet definitionem in usu. Pro eu facer velit dicit. Duis habeo malis mea ea, mea paulo suscipit eu. Mutat saepe tibique mei ut, veniam indoctum eum id. Brute inani reformidans ad vel. Tation viderer consulatu no nec, per ut saepe iuvaret.
Cu quo saperet philosophia. Ex exerci feugiat elaboraret vix, has blandit contentiones et, cu usu movet volumus. Vix id debitis deleniti, ut nostrud antiopam vulputate sed, impetus scripserit reformidans mel eu. Mea eu erat consetetur conclusionemque, ad lucilius platonem disputationi nec. Qui ignota possim et, ius ei vidisse laboramus. Eum eu minim iisque, id usu quot volutpat, gubergren mnesarchum accommodare eu pro. Vix enim dolore efficiendi et.
Id eos purto congue reformidans, erant soleat ridens no mel. No mea scripta legimus praesent, elitr similique eu duo, tamquam fierent reformidans qui in. Ex graeci torquatos sed, vide oblique at nam, vis altera sensibus ei. Illud iudico regione ad sea, eu sint perfecto voluptatibus vel. Vel no delectus consequat prodesset, nominavi tacimates nominati qui ad, eam unum euripidis referrentur an. Dico soluta legendos mea ei, vel brute solet decore ex.
Eu affert latine qui. Invenire persecuti vituperata vis cu, oblique insolens at nec, te nec simul facilis. Iudico decore singulis vix cu, sea ne iuvaret honestatis, pro te tale labitur. Indoctum contentiones cum ea, id quo facete lucilius conclusionemque. Habemus periculis voluptaria ea eos, ius ne dicat graece tacimates. Ius id viris appareat perfecto, pro impetus iracundia incorrupte ex.
Nam elit everti at. Vis malis vitae moderatius an.
        \n\n\n\n\n\n\n\n\n\n
    </string>
</resources>