<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_friends"
        android:enabled="true"
        android:icon="@drawable/ic_friends_white_24dp"
        android:title="@string/text_friends"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_groups"
        android:enabled="true"
        android:icon="@drawable/ic_groups_white_24dp"
        android:title="@string/text_groups"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_activity"
        android:enabled="true"
        android:icon="@drawable/ic_activity_white_24dp"
        android:title="@string/text_activity"
        app:showAsAction="ifRoom" />
    <!--
    <item
        android:id="@+id/action_add"
        android:enabled="true"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/text_add"
        app:showAsAction="ifRoom" />
        !-->
    <item
        android:id="@+id/action_add"
        android:enabled="true"
        android:icon="@drawable/ic_testedit"
        android:title="@string/text_add"
        app:showAsAction="ifRoom" />
    <!--
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/text_settings"
        app:showAsAction="ifRoom" />
    !-->
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_testsetting"
        android:title="@string/text_settings"
        app:showAsAction="ifRoom" />
</menu>